--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,8 @@
     <title>Home</title>
 </head>
 <body>
-    <h1>Login Authentication System</h1>
+    <h1>Login Authentication System for Rental & Bill Splitter.</h1>
+    <a href="{{url_for('login')}}">Login Page</a><br>
+    <a href="{{url_for('register')}}">Register Page</a>
 </body>
 </html>
