--- a/templates/register.html
+++ b/templates/register.html
@@ -7,6 +7,14 @@
 </head>
 <body>
     <h1>Register Page</h1>
+
+    <form method="POST" action="">
+        {{ form.hidden_tag() }}
+        {{ form.username }}
+        {{ form.password }}
+        {{ form.submit }}
+    </form>
+    
     <a href="{{url_for('login')}}">Already have an account? Log In Here!</a>
 </body>
 </html>
