--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Hello! You have successfully logged in!</h1>
+    <a href ="{{url_for('logout')}}">Press here to logout</a>
 </body>
 </html>
