--- a/templates/home.html
+++ b/templates/home.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="static/style.css">
     <title>Home</title>
 </head>
 <body>
     <h1>Login Authentication System for Rental & Bill Splitter.</h1>
-    <a href="{{url_for('login')}}">Login Page</a><br>
-    <a href="{{url_for('register')}}">Register Page</a>
+    <button class="btn">
+        <a href="{{url_for('login')}}">Login Page</a>
+    </button><br>
+    <button class="btn">
+        <a href="{{url_for('register')}}">Register Page</a>
+    </button>
 </body>
 </html>
