--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
     <title>Home</title>
 </head>
 <body>
-    <h1>Login Authentication System for Rental & Bill Splitter.</h1>
+    <h1>Login Authentication System for Rental & Bill Splitter</h1>
     <button class="btn">
         <a href="{{url_for('login')}}">Login Page</a>
     </button><br>
