--- a/templates/login.html
+++ b/templates/login.html
@@ -15,6 +15,8 @@
         {{ form.submit }}
     </form>
     
-    <a href="{{url_for('register')}}">Don't have an account? Sign Up here!</a>
+    <a href="{{url_for('register')}}">Don't have an account? Sign Up here!</a><br>
+    <a href="{{url_for('home')}}">Click here to return home!</a>
+    
 </body>
 </html>
