--- a/templates/register.html
+++ b/templates/register.html
@@ -15,6 +15,8 @@
         {{ form.submit }}
     </form>
     
-    <a href="{{url_for('login')}}">Already have an account? Log In Here!</a>
+    <a href="{{url_for('login')}}">Already have an account? Log In Here!</a><br>
+    <a href="{{url_for('home')}}">Click here to return home!</a>
+    
 </body>
 </html>
