--- a/templates/login.html
+++ b/templates/login.html
@@ -4,19 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="stylesheet" href="static/loginstyle.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-    <h1>Login Page</h1>
 
-    <form method="POST" action="">
-        {{ form.hidden_tag() }}
-        {{ form.username }}
-        {{ form.password }}
-        {{ form.submit }}
-    </form>
-    
-    <a href="{{url_for('register')}}">Don't have an account? Sign Up here!</a><br>
-    <a href="{{url_for('home')}}">Click here to return home!</a>
+    <div class="login-container">
+       <div class="wrapper">
+        <h1>Login Page</h1>
+
+        <form method="POST" action="">
+            {{ form.hidden_tag() }}
+            
+                <div class="input-box">
+                    {{ form.username }}
+                    <i class='bx bx-user'></i>
+                </div> <div class="input-box">
+                    {{ form.password }}
+                    <i class='bx bxs-lock-alt'></i>
+                </div>
+
+                {{ form.submit }}
+            
+        </form>
+
+        <div class="links">
+            <a href="{{url_for('register')}}">Don't have an account? Sign Up here!</a><br>
+            <a href="{{url_for('home')}}">Click here to return home!</a>
+        </div>
+    </div>
     
 </body>
 </html>
