--- a/static/loginstyle.css
+++ b/static/loginstyle.css
@@ -4,17 +4,24 @@
     box-sizing: border-box;
     font-family: "Poppins"
 }
-body{
+body {
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: seagreen;
+    background-image: url("/static/bg.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 .wrapper{
     width: 420px;
-    background: purple;
+    background: transparent;
+    border: 2px solid rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(10px);
     color: #fff;
+    border-radius: 12px;
+    padding: 30px 40px;
 }
 .wrapper h1{
     font-size: 36px;
@@ -22,6 +29,7 @@ body{
 }
 .wrapper .input-box{
     width: 100%;
+    position: relative;
     height: 50px;
     margin: 30px 0;
 }
@@ -33,11 +41,35 @@ body{
     outline: none;
     border: 2px solid rgba(255, 255, 255, 0.2);
     border-radius: 40px;
+    font-size: 16px;
+    color: #fff;
+    padding: 20px 45px 20px 20px;
 }
 .input-box input::placeholder{
     color: #fff;
 }
 .input-box i{
     position: absolute;
-    right:20px
+    right:20px;
+    top: 30%;
+    transform: translate(-50%);
+    font-size: 20px;
 }
+.btn input {
+    width: 100%;
+    height: 45px;
+    background: #fff;
+    border: none;
+    outline: none;
+    border-radius: 40px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+    cursor: pointer;
+    color: #333;
+    font-weight: 600;
+}
+.wrapper .register-link {
+    font-size: 14.5px;
+    text-align: center;
+    margin: 20px 0 15px; 
+}
+
