--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -136,6 +136,7 @@
                 <div class="alert alert-light border">
                     <small class="text-muted text-uppercase">House Utility Rates</small>
                     <ul class="mb-0 ps-3 mt-1">
+                        <li><strong>Rent: RM {{ sub_room_rent }}</strong></li>
                         <li>Elec: RM {{ "%.2f"|format(layout.e_rate) }}/kWh</li>
                         <li>Water: RM {{ "%.2f"|format(layout.w_rate) }}/m³</li>
                     </ul>
